--- a/Milo/style.css
+++ b/Milo/style.css
@@ -142,6 +142,7 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    cursor: pointer;
 }
 
 .card-video {
@@ -241,38 +242,6 @@ body {
     font-size: 12px;
 }
 
-.watchlist-btn {
-    position: relative;
-    width: 100%;
-    text-transform: capitalize;
-    background: none;
-    border: none;
-    font-weight: 500;
-    text-align: right;
-    color: rgba(255, 255, 255, 0.5);
-    margin: 5px 0;
-    cursor: pointer;
-    padding: 10px 5px;
-    border-radius: 5px;
-}
-
-.watchlist-btn::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: -5px;
-    height: 35px;
-    width: 35px;
-    background-image: url(./images/add.png);
-    background-size: cover;
-    transform: scale(0.4);
-}
-
-.watchlist-btn:hover {
-    color: #fff;
-    background: rgba(255, 255, 255, 0.1);
-}
-
 .pre-btn,
 .nxt-btn {
     position: absolute;
@@ -313,12 +282,14 @@ body {
   }
   
 
-  .img-profile {
+.img-profile {
     width: 70px;
     height: 70px;
+    margin-left: 60%;
 }
   
-  ul.menu {
+ul.menu {
+    margin-left: 10%;
     margin-top: 24px;
     width: 100%;
     max-width: 300px;
@@ -353,12 +324,13 @@ ul.menu li {
     transition: background .2s ease;
 }
 
-.menu .submenu li:nth-child(1):hover,
-.menu .submenu li:nth-child(2):hover,
-.menu .submenu li:nth-child(3):hover,
-.menu .submenu li:nth-child(4):hover,
-.menu .submenu li:nth-child(5):hover {
+.menu .submenu li:nth-child(1):hover {
     background-color: #65D076;
+    
+}
+
+.menu .submenu li:nth-child(2):hover {
+    background-color: #d06565;
 }
 
 .menu img {
