--- a/Max/css/Inside out.css
+++ b/Max/css/Inside out.css
@@ -61,6 +61,18 @@ nav {
     margin-left: 25px;
 }
 
+
+@media only screen and (max-width: 600px) {
+    .navMenu .mobile-hide {
+        display: none;
+    }
+
+    .controls {
+        margin-top: 100%;
+        top: 100%;
+    }
+}
+
 .navMenu a {
     display: flex;
     align-items: center;
