--- a/Max/css/Inside out.css
+++ b/Max/css/Inside out.css
@@ -68,8 +68,7 @@ nav {
     }
 
     .controls {
-        margin-top: 100%;
-        top: 100%;
+        margin: 280px 0; /* Ändere hier den Abstand nach Bedarf */
     }
 }
 
