--- a/Max/css/Inside out.css
+++ b/Max/css/Inside out.css
@@ -70,11 +70,11 @@ nav {
     }
 
     .detalImgTitle {
-        margin-top: 80%;
+        margin-top: 300px;
     }
 
     .controls button {
-        margin-top: 90%;
+        margin-top: 100%;
     }
 
     .navMenu .mobile-hide {
