--- a/Max/css/Inside out.css
+++ b/Max/css/Inside out.css
@@ -64,9 +64,27 @@ nav {
 
 @media only screen and (max-width: 600px) {
 
+    #videoModal {
+        width: 90%; /* 90% der Bildschirmbreite */
+        margin: 5% auto; /* Zentriert das Modal */
+    }
+
+    .modal-content {
+        width: 100%; /* Volle Breite für den Modal-Inhalt */
+    }
+
+    iframe {
+        width: 100%; /* 100% Breite für das eingebettete Video */
+        height: 200px; /* Eine feste Höhe für das Video, kann nach Bedarf angepasst werden */
+    }
+
+    .close {
+        font-size: 20px; /* Ändert die Schriftgröße des Schließen-Symbols */
+    }
+
     .detailBgImg img {
-        width: 10px;
-        height: 50%;
+        width: 100%;
+        height: auto;
     }
 
     .detailImgTitle {
@@ -82,12 +100,7 @@ nav {
         display: none;
     }
 
-    .videoModalvideo {
-        width: 460px;
-        height: 215px;
-    }
 }
-
 
 
 
