--- a/Milo/css/Inside out.css
+++ b/Milo/css/Inside out.css
@@ -4,6 +4,7 @@ html {
 
 * {
     box-sizing: border-box;
+    user-select: none;
 }
 
 body {
@@ -60,6 +61,62 @@ nav {
     margin-right: auto;
     margin-left: 25px;
 }
+
+
+@media only screen and (max-width: 600px) {
+
+  .detailBgImg img {
+    object-fit:cover;
+    display: flex;
+  }
+
+  .detailImgTitle {
+    position: relative;
+  }
+  
+  .detailImgTitle img {
+    position: absolute;
+    top: 350px; 
+    width: 150px;
+    height: 100px;
+
+    object-fit: cover;
+  }
+
+    #videoModal {
+        width: 90%;
+        margin: 5% auto;
+    }
+
+    .modal-content {
+        width: 100%;
+    }
+
+    iframe {
+        width: 100%;
+        height: 200px;
+    }
+
+    .close {
+        font-size: 20px;
+    }
+
+    .detailBgImg img {
+        width: 100%;
+        height: auto;
+    }
+
+    .controls button {
+        margin-top: 90%;
+    }
+
+    .navMenu .mobile-hide {
+        display: none;
+    }
+
+}
+
+
 
 .navMenu a {
     display: flex;
@@ -357,13 +414,6 @@ nav {
         width: 25px;
     }
 
-    .subTitle {
-        font-size: 12px;
-    }
-    
-    .description {
-        font-size: 14px;
-    }
 }
 
 @media only screen and (max-width: 479px) {
@@ -388,11 +438,4 @@ nav {
         width: 25px;
     }
 
-    .subTitle {
-        font-size: 12px;
-    }
-    
-    .description {
-        font-size: 14px;
-    }
 }
