--- a/Milo/css/index.css
+++ b/Milo/css/index.css
@@ -25,7 +25,7 @@ nav {
     left: 0;
     right: 0;
     height: 70px;
-    background-color: #090b13;
+    background-color: #040714;
     display: flex;
     justify-content: space-between;
     align-items: center;
