--- a/Max/css/index.css
+++ b/Max/css/index.css
@@ -20,6 +20,7 @@ a {
 }
 
 nav {
+    user-select: none;
     position: fixed;
     top: 0;
     left: 0;
@@ -151,6 +152,7 @@ nav {
 }
 
 main {
+    user-select: none;
     position: relative;
     min-height: calc(100vh - 250px);
     overflow-x: hidden;
